# apigen-xml

./: Cargo.toml  README.md
src/: main.rs
src/common/: api.rs  defines.rs  error.rs  mod.rs  utils.rs
src/generated_protocols/: magma_protocol.rs  mod.rs
src/generator/: decoder_writer.rs  encoder_writer.rs  ffi_writer.rs  header_writer.rs  mod.rs  protocol_writer.rs  rust_writer.rs  types.rs  utils.rs  writer.rs
src/generator/templates/: copyright.jinja  ffi.jinja  ffi_instance.jinja  header.jinja  header_instance.jinja  protocol.jinja  protocol_instance.jinja  rust.jinja  rust_instance.jinja
src/generator/templates/decoder/: file.jinja
src/generator/templates/encoder/: file.jinja
src/generator/templates/ffi/: file.jinja  function.jinja  object.jinja
src/generator/templates/header/: constant.jinja  enum.jinja  extensible_struct.jinja  file.jinja  function.jinja  object.jinja  struct.jinja
src/generator/templates/protocol/: constant.jinja  enum.jinja  extensible_struct.jinja  file.jinja  protocol.jinja  protocol_enum.jinja  request_response.jinja  struct.jinja
src/generator/templates/rust/: constant.jinja  enum.jinja  extensible_struct.jinja  file.jinja  flag.jinja  struct.jinja
src/parser/: mod.rs  xml.rs
xml/: magma.xml
